version2.0 chore: 清理冗余文件并更新项目配置
1. 删除所有冗余的SQL脚本、调试脚本和临时数据文件
2. 重置登录页默认账号为空，移除硬编码的演示账号
3. 修正文件上传路径配置，适配Linux环境
4. 更新前端注册接口调用方法名
5. 修复Java stream API兼容性问题，替换toList()为collect(Collectors.toList())
6. 优化静态资源映射和拦截器配置
7. 更新README文档，补充双前端架构说明